bug 1316165 ensure xcb_get_input_focus_reply is called to avoid leaking the reply r=lsalzman a=lhenry

--HG--
extra : amend_source : 2f958d541dd9f3a086e88df7f1146a7424fe774e