widget/nsShmImage.h
@@ -1,4 +1,4 @@
-/* -*- Mode: C++; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*-
+/* -*- Mode: C++; tab-width: 8; indent-tabs-mode: nil; c-basic-offset: 2 -*-
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -47,6 +47,8 @@ private:
 
   bool CreateImage(const mozilla::gfx::IntSize& aSize);
   void DestroyImage();
+
+  void WaitIfPendingReply();
 
   xcb_connection_t*            mConnection;
   Window                       mWindow;
